--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -24,10 +24,12 @@
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.4",
     "@ant-design/icons-angular": "^19.0.0",
+    "@ctrl/tinycolor": "^4.1.0",
     "@ngxs/devtools-plugin": "^19.0.0",
     "@ngxs/logger-plugin": "^19.0.0",
     "@ngxs/storage-plugin": "^19.0.0",
     "@ngxs/store": "^19.0.0",
+    "@types/crypto-js": "^4.2.2",
     "animejs": "^3.2.2",
     "apexcharts": "^4.2.0",
     "crypto-js": "^4.2.0",
