--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -29,6 +29,8 @@
     "@ngxs/logger-plugin": "^19.0.0",
     "@ngxs/storage-plugin": "^19.0.0",
     "@ngxs/store": "^19.0.0",
+    "@tailwindcss/postcss": "^4.0.3",
+    "@tailwindcss/vite": "^4.0.3",
     "@types/crypto-js": "^4.2.2",
     "animejs": "^3.2.2",
     "apexcharts": "^4.4.0",
@@ -39,7 +41,6 @@
     "ng-apexcharts": "^1.15.0",
     "ng-zorro-antd": "^19.0.2",
     "rxjs": "~7.8.1",
-    "tailwindcss": "^3.4.16",
     "three": "^0.173.0",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
@@ -51,12 +52,15 @@
     "@types/express": "^5.0.0",
     "@types/jasmine": "~5.1.5",
     "@types/node": "^22.13.0",
+    "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.3",
     "typescript": "~5.7.3"
   }
 }
