--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -49,7 +49,10 @@
             "prerender": true,
             "ssr": {
               "entry": "src/server.ts"
-            }
+            },
+            "allowedCommonJsDependencies": [
+              "crypto-js"
+            ]
           },
           "configurations": {
             "production": {
